--- a/test-client/public/src/assets/main.css
+++ b/test-client/public/src/assets/main.css
@@ -1,4 +1,2 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import url('bulma/css/bulma.css');
 @import url('@fortawesome/fontawesome-free/css/all.css');
